--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 "imagecanal2":"https://upload.wikimedia.org/wikipedia/commons/2/22/Offline_TV_Logo.png",
 
-"linkcanal2":"https://youtu.be/U7aDDL8tJwQ",
+"linkcanal2":"https://lightspeedst.net/s3/mp4/dragon-ball-super-movie-broly-dublado/sd/1.mp4",
 
 "linkmtmanagerf":"https://upload.wikimedia.org/wikipedia/pt/7/74/Dragon_Ball_Super_Key_visual.jpg",
 
@@ -56,19 +56,19 @@
 
 "imagecanal3":"https://upload.wikimedia.org/wikipedia/commons/2/22/Offline_TV_Logo.png",
 
-"linkcanal3":"https://youtu.be/77iliWh6ks4",
+"linkcanal3":"https://lightspeedst.net/s3/mp4/dragon-ball-super-movie-broly-dublado/sd/1.mp4",
 
 "textodocanal4":"Offline",
 
 "imagecanal4":"https://upload.wikimedia.org/wikipedia/commons/2/22/Offline_TV_Logo.png",
 
-"linkcanal4":"https://youtu.be/77iliWh6ks4", 
+"linkcanal4":"https://lightspeedst.net/s3/mp4/dragon-ball-super-movie-broly-dublado/sd/1.mp4", 
 
 "textodocanal5":"Offline",
 
 "imagecanal5":"https://upload.wikimedia.org/wikipedia/commons/2/22/Offline_TV_Logo.png",
 
-"linkcanal5":"https://youtu.be/77iliWh6ks4",
+"linkcanal5":"https://lightspeedst.net/s3/mp4/dragon-ball-super-movie-broly-dublado/sd/1.mp4",
 
 "dgtitleobb":"Escolha um",
 
