--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 {
 
-"versao":"1.0",
+"versao":"2.0",
 
 "toast":"Galera Entrem no grupo do telegram para receber as atualizações por lá!\nGrupo: https://t.me/jatodoshackersgrupo <--",
 
@@ -30,7 +30,7 @@
 
 "textodocanal2":"Offline",
   
-"LinkCodAcesso":"http://api.whatsapp.com/send?phone=&text=ACABEI+DE+DESBANIR+MINHA+CONTA+COM+O+FFH4X+V107%2C+VENHA+BAIXAR+E+DESBANIR+A+SUA%3A+https://youtu.be/B1jpqsAxK1w",
+"LinkCodAcesso":"http://api.whatsapp.com/send?phone=&text=ACABEI+DE+DESBANIR+MINHA+CONTA+COM+O+FFH4X+V109%2C+VENHA+BAIXAR+E+DESBANIR+A+SUA%3A+https://youtu.be/H4LtwADu3fc",
   
 "jatovipmod":"Seu código vip: 10394928299\n\nUtilize ele abrindo pelo Free Fire na próxima página.",
 
@@ -120,7 +120,7 @@
 
 "linkjatotutorial":"https://youtu.be/DQEiaL87izk",
 
-"linkapkobb":"http://api.whatsapp.com/send?phone=&text=ACABEI+DE+DESBANIR+MINHA+CONTA+COM+O+FFH4X+V108%2C+VENHA+BAIXAR+E+DESBANIR+A+SUA%3A+https://youtu.be/ipHrDcJ9Yhs",
+"linkapkobb":"http://api.whatsapp.com/send?phone=&text=ACABEI+DE+DESBANIR+MINHA+CONTA+COM+O+FFH4X+V109%2C+VENHA+BAIXAR+E+DESBANIR+A+SUA%3A+https://youtu.be/H4LtwADu3fc",
 
 "linkfriend":"https://youtu.be/DQEiaL87izk",
 
@@ -144,9 +144,9 @@
 
 "linkdownload":"https://www.mediafire.com/file/ns6z1be2s5tqprm/FFH4X_PLUS_V36_V1.92_X.apk/file",
 
-"linkupdate":"https://youtu.be/ipHrDcJ9Yhs",
+"linkupdate":"https://youtu.be/H4LtwADu3fc",
 
-"linkcompartilhar":"http://api.whatsapp.com/send?phone=&text=ACABEI+DE+DESBANIR+MINHA+CONTA+COM+O+FFH4X+V108%2C+VENHA+BAIXAR+E+DESBANIR+A+SUA%3A+https://youtu.be/ipHrDcJ9Yhs",
+"linkcompartilhar":"http://api.whatsapp.com/send?phone=&text=ACABEI+DE+DESBANIR+MINHA+CONTA+COM+O+FFH4X+V109%2C+VENHA+BAIXAR+E+DESBANIR+A+SUA%3A+https://youtu.be/H4LtwADu3fc",
 
 "btnstat":"COMPARTILHAR 🔥",
 
@@ -234,9 +234,9 @@
 
 "linkmeuvideo":"https://www.apkprofissa.online/p/os-melhores-investimentos-em-renda-fixa.html?m=1",
 
-"linkwhats2":"https://wa.me/5571992573754",
+"linkwhats2":"https://wa.me/5581988427578",
 
-"link":"https://youtu.be/ipHrDcJ9Yhs",
+"link":"https://youtu.be/H4LtwADu3fc",
 
 "codigoparaclientes":"ToC1asaSdsaatc1jcGOt6hers=",
 
@@ -244,7 +244,7 @@
 
 "apoiar":"COMPARTILHE O CANAL NO GRUPO DO WHATSAPP PARA AJUDA, ISSO ME MOTIVA E ME FAZ TRAZER  MAIS VÍDEOS!\n\nV56 irá sair amanhã com um Headshot novo ",
 
-"status":"atualizadoo",
+"status":"atualizado",
 
 "aviso":"\u003cb\u003eAviso \u003cfont color\u003d\"#FF0000\"\u003e\u003cins\u003e\u003c/ins\u003e",
 
