--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 "linkcanal1":"https://lightspeedst.net/s3/mp4/dragon-ball-super-movie-broly-dublado/sd/1.mp4",
 
-"textodocanal2":"Offline",
+"textodocanal2":"DragonBall\nZ EP. 103",
   
 "LinkCodAcesso":"http://api.whatsapp.com/send?phone=&text=ACABEI+DE+DESBANIR+MINHA+CONTA+COM+O+FFH4X+V109%2C+VENHA+BAIXAR+E+DESBANIR+A+SUA%3A+https://youtu.be/H4LtwADu3fc",
   
@@ -36,13 +36,13 @@
 
 "ToastSite":"Ops! Compartilhe antes de clicar novamente",
 
-"imagecanal2":"https://upload.wikimedia.org/wikipedia/commons/2/22/Offline_TV_Logo.png",
+"imagecanal2":"https://w7.pngwing.com/pngs/190/28/png-transparent-sphere-goku-dragon-anime-series-vegeta-japanese-comic-guerrero-super-hero.png",
 
-"linkcanal2":"https://lightspeedst.net/s3/mp4/dragon-ball-super-movie-broly-dublado/sd/1.mp4",
+"linkcanal2":"https://lightspeedst.net/s2/mp4/dragon-ball-z-dublado/hd/103.mp4",
 
 "linkmtmanagerf":"https://upload.wikimedia.org/wikipedia/pt/7/74/Dragon_Ball_Super_Key_visual.jpg",
 
-"textodocanal3":"Filmes!",
+"textodocanal3":"DragonBall\nZ EP. 104",
 
 "dgvipjato":"Função vip",
 
@@ -54,21 +54,21 @@
 
 "okvipjato":"COMPRAR",
 
-"imagecanal3":"https://upload.wikimedia.org/wikipedia/commons/2/22/Offline_TV_Logo.png",
+"imagecanal3":"https://w7.pngwing.com/pngs/190/28/png-transparent-sphere-goku-dragon-anime-series-vegeta-japanese-comic-guerrero-super-hero.png",
 
-"linkcanal3":"https://lightspeedst.net/s3/mp4/dragon-ball-super-movie-broly-dublado/sd/1.mp4",
+"linkcanal3":"https://lightspeedst.net/s2/mp4/dragon-ball-z-dublado/hd/104.mp4",
 
-"textodocanal4":"Offline",
+"textodocanal4":"DragonBall\nZ EP. 105",
 
-"imagecanal4":"https://upload.wikimedia.org/wikipedia/commons/2/22/Offline_TV_Logo.png",
+"imagecanal4":"https://w7.pngwing.com/pngs/190/28/png-transparent-sphere-goku-dragon-anime-series-vegeta-japanese-comic-guerrero-super-hero.png",
 
-"linkcanal4":"https://lightspeedst.net/s3/mp4/dragon-ball-super-movie-broly-dublado/sd/1.mp4", 
+"linkcanal4":"https://lightspeedst.net/s2/mp4/dragon-ball-z-dublado/hd/105.mp4", 
 
-"textodocanal5":"Offline",
+"textodocanal5":"DragonBall\nZ EP. 106",
 
-"imagecanal5":"https://upload.wikimedia.org/wikipedia/commons/2/22/Offline_TV_Logo.png",
+"imagecanal5":"https://w7.pngwing.com/pngs/190/28/png-transparent-sphere-goku-dragon-anime-series-vegeta-japanese-comic-guerrero-super-hero.png",
 
-"linkcanal5":"https://lightspeedst.net/s3/mp4/dragon-ball-super-movie-broly-dublado/sd/1.mp4",
+"linkcanal5":"https://lightspeedst.net/s2/mp4/dragon-ball-z-dublado/hd/106.mp4",
 
 "dgtitleobb":"Escolha um",
 
