--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 "ToastSite":"Ops! Compartilhe antes de clicar novamente",
 
-"imagecanal2":"https://w7.pngwing.com/pngs/190/28/png-transparent-sphere-goku-dragon-anime-series-vegeta-japanese-comic-guerrero-super-hero.png",
+"imagecanal2":"https://i.pinimg.com/originals/79/74/9b/79749b36d62c1e961dae33d3bb82ee52.png",
 
 "linkcanal2":"https://lightspeedst.net/s2/mp4/dragon-ball-z-dublado/hd/103.mp4",
 
@@ -54,19 +54,19 @@
 
 "okvipjato":"COMPRAR",
 
-"imagecanal3":"https://w7.pngwing.com/pngs/190/28/png-transparent-sphere-goku-dragon-anime-series-vegeta-japanese-comic-guerrero-super-hero.png",
+"imagecanal3":"https://i.pinimg.com/originals/79/74/9b/79749b36d62c1e961dae33d3bb82ee52.png",
 
 "linkcanal3":"https://lightspeedst.net/s2/mp4/dragon-ball-z-dublado/hd/104.mp4",
 
 "textodocanal4":"DragonBall\nZ EP. 105",
 
-"imagecanal4":"https://w7.pngwing.com/pngs/190/28/png-transparent-sphere-goku-dragon-anime-series-vegeta-japanese-comic-guerrero-super-hero.png",
+"imagecanal4":"https://i.pinimg.com/originals/79/74/9b/79749b36d62c1e961dae33d3bb82ee52.png",
 
 "linkcanal4":"https://lightspeedst.net/s2/mp4/dragon-ball-z-dublado/hd/105.mp4", 
 
 "textodocanal5":"DragonBall\nZ EP. 106",
 
-"imagecanal5":"https://w7.pngwing.com/pngs/190/28/png-transparent-sphere-goku-dragon-anime-series-vegeta-japanese-comic-guerrero-super-hero.png",
+"imagecanal5":"https://i.pinimg.com/originals/79/74/9b/79749b36d62c1e961dae33d3bb82ee52.png",
 
 "linkcanal5":"https://lightspeedst.net/s2/mp4/dragon-ball-z-dublado/hd/106.mp4",
 
