--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 "cancelar":"",
 
-"linkronaldo":"https://youtube.com/watch?v=uYX33rZknrs&feature=shareb",
+"linkronaldo":"https://youtu.be/jxdanw7FbsM",
 
 "toastvideo":"O DOWNLOAD ESTÁ NÓS COMENTÁRIOS"
 
