--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 "cancelar":"",
 
-"linkronaldo":"https://youtu.be/jxdanw7FbsM",
+"linkronaldo":"https://youtu.be/m_JjH_MM4RQ",
 
 "toastvideo":"O DOWNLOAD ESTÁ NÓS COMENTÁRIOS"
 
